<resources>
    <string name="app_name">worker</string>
    <string name="job_card">Job Card Number</string>
    <string name="or">OR</string>


    <!-- Fragment Strings Used -->
    <string name="check_status">Check Status</string>
    <string name="e_jobcard">E-JobCard</string>
    <string name="demand_job">Demand Job</string>

    <!-- Ejobcard Fragment Strings Used -->
    <string name="label_jobcardno">Jobcard No</string>
    <string name="label_headname">Name of Head Of Household</string>
    <string name="label_father_name">Name of Father/Husband</string>
    <string name="label_category">Category</string>
    <string name="label_address">Address</string>
    <string name="label_village">Village</string>
    <string name="label_panchayat">Panchayat</string>
    <string name="label_block">Block</string>
    <string name="label_district">District</string>
    <string name="label_familyid">Family Id</string>
    <string name="label_jobcard_details">Jobcard Details</string>
    <string name="label_family_details">Member Details</string>
    <string name="people_willing_to_work">Names</string>
    <string name="start_date">Start Date</string>
    <string name="next_page">Continue</string>

    <!-- Check Status Fragment Strings Used -->
    <string name="spinner_title">Select Category</string>

    <!-- Demand Confirmation Strings Used -->
    <string name="demand_confirmed">Demand Confirmed</string>
    <string name="demand_name">Name:</string>
    <string name="demand_familyid">Family Id:</string>
    <string name="demand_category">Category:</string>
    <string name="demand_address">Address:</string>
    <string name="demand_startdate">Start Date:</string>
    <string name="demand_enddate">End Date:</string>
    <string name="demand_confirmation">Demand Confirmation:</string>
    <string name="application_status">Application Status</string>
    <string name="payment_status">Payment Status</string>
    <string name="demand_ID">Demand ID</string>
    <string name="label_days_left">Days Left</string>

</resources>
