<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="3"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/demand_jobcard_no"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="1"
        android:text="@string/label_jobcardno"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_jobcard_no_value"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="1"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_name"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="3"
        android:text="@string/demand_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_name_value"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="3"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_familyid"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text="@string/demand_familyid"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_familyid_value"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_category"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text="@string/demand_category"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_category_value"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_address"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text="@string/demand_address"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_address_value"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_start_date"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text="@string/demand_startdate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_start_date_value"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_end_date"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text="@string/demand_enddate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_end_date_value"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_confirm"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text="@string/demand_confirmation"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/demand_confirm_value"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>



    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="64dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4" />
</LinearLayout>
